--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -34,7 +34,7 @@ jobs:
       
       - name: Build with PyInstaller
         run: |
-          pyinstaller --onefile --name="dv-${{ env.VERSION }}-linux" src/dv/main.py
+          pyinstaller --onefile --name="dv-${{ env.VERSION }}-linux" main.py
       
       - name: Install AppImage tools
         run: |
@@ -83,7 +83,8 @@ jobs:
       
       - name: Build AppImage
         run: |
-          ./appimagetool AppDir "DV-${{ env.VERSION }}-x86_64.AppImage"
+          # Set the architecture explicitly
+          ARCH=x86_64 ./appimagetool AppDir "DV-${{ env.VERSION }}-x86_64.AppImage"
       
       - name: Upload artifact
         uses: actions/upload-artifact@v4
