--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all history and tags
       
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -34,6 +36,9 @@ jobs:
           VERSION=$(python -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Version: $VERSION"
+          
+          # Debug: Check current git ref
+          echo "Current GitHub ref: $GITHUB_REF"
       
       - name: Build with PyInstaller
         run: |
@@ -95,9 +100,20 @@ jobs:
           name: dv-linux
           path: DV-${{ env.VERSION }}-x86_64.AppImage
           
+      - name: Check if running on tag
+        id: check-tag
+        run: |
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            echo "IS_TAG=true" >> $GITHUB_ENV
+            echo "Running on tag: $GITHUB_REF"
+          else
+            echo "IS_TAG=false" >> $GITHUB_ENV
+            echo "Not running on a tag: $GITHUB_REF"
+          fi
+          
       - name: Create Release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+        if: env.IS_TAG == 'true'
         with:
           files: DV-${{ env.VERSION }}-x86_64.AppImage
           name: DV ${{ env.VERSION }}
