--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -40,12 +40,14 @@ jobs:
           uv venv
           source .venv/bin/activate
           uv pip install -e .
-          uv pip install "pyinstaller<6.0.0" toml
+          
+          # Install specific PyInstaller version compatible with Python 3.13
+          uv pip install "pyinstaller>=6.1.0" toml
           
           # Create necessary directories
           mkdir -p docs db prompts
       
-      - name: Extract version from pyproject.toml
+      - name: Extract version from pyproject.toml and verify environment
         id: get_version
         run: |
           source .venv/bin/activate
@@ -55,6 +57,16 @@ jobs:
           
           # Debug: Check current git ref
           echo "Current GitHub ref: $GITHUB_REF"
+          
+          # Verify Python configuration and available standard libraries
+          echo "Python version information:"
+          python --version
+          
+          echo "Checking critical modules availability:"
+          python -c "import glob; print('glob module is available')"
+          python -c "import pathlib; print('pathlib module is available')"
+          python -c "import pydantic; print(f'pydantic version: {pydantic.__version__}')"
+          python -c "import PyInstaller; print(f'PyInstaller version: {PyInstaller.__version__}')"
       
       - name: Create PyInstaller spec file
         run: |
@@ -65,26 +77,46 @@ jobs:
           
           cat > dv.spec << EOF
           # -*- mode: python ; coding: utf-8 -*-
+          import sys
+          import glob
+          from PyInstaller.utils.hooks import collect_all
 
           block_cipher = None
+          
+          # Collect pydantic with all its dependencies
+          pydantic_datas, pydantic_binaries, pydantic_hiddenimports = collect_all('pydantic')
+          langchain_datas, langchain_binaries, langchain_hiddenimports = collect_all('langchain_ollama')
+          langchain_core_datas, langchain_core_binaries, langchain_core_hiddenimports = collect_all('langchain_core')
+          
+          # Add standard library modules that might be missed
+          std_lib_imports = ['glob', 'pathlib', 'collections', 'collections.abc', 'os', 're', 'sys', 
+                             'sqlite3', 'datetime', 'logging', 'functools', 'typing']
 
           a = Analysis(
               ['src/dv/main.py'],
               pathex=[],
-              binaries=[],
+              binaries=[*pydantic_binaries, *langchain_binaries, *langchain_core_binaries],
               datas=[
                   ('prompts', 'prompts'),
                   ('docs', 'docs'),
+                  ('db', 'db'),
+                  *pydantic_datas, 
+                  *langchain_datas,
+                  *langchain_core_datas
               ],
               hiddenimports=[
+                  *std_lib_imports,
+                  *pydantic_hiddenimports,
+                  *langchain_hiddenimports,
+                  *langchain_core_hiddenimports,
                   'pydantic.deprecated.decorator',
                   'pydantic.deprecated',
+                  'pydantic._internal._model_construction',
                   'pydantic.version',
                   'langchain_community.vectorstores',
                   'langchain_community.embeddings',
-                  'langchain.schema',
-                  'langchain.embeddings',
-                  'langchain.vectorstores',
+                  'numpy',
+                  'ollama',
               ],
               hookspath=[],
               hooksconfig={},
@@ -124,8 +156,23 @@ jobs:
       - name: Build with PyInstaller
         run: |
           source .venv/bin/activate
-          pyinstaller dv.spec
+          # Build with verbose output and clean build directory
+          python -m PyInstaller --clean --verbose dv.spec
       
+      - name: Verify built binary
+        run: |
+          # Check if binary was created successfully
+          if [ ! -f "dist/dv-${{ env.VERSION }}-linux" ]; then
+            echo "ERROR: PyInstaller failed to create the binary!"
+            exit 1
+          fi
+          
+          # Check some basic properties of the binary
+          file "dist/dv-${{ env.VERSION }}-linux"
+          
+          # Run ldd to check library dependencies
+          ldd "dist/dv-${{ env.VERSION }}-linux" || true
+          
       - name: Create AppDir structure
         run: |
           mkdir -p AppDir/usr/bin
@@ -143,7 +190,7 @@ jobs:
           # Create desktop file
           cat > AppDir/usr/share/applications/dv.desktop << EOF
           [Desktop Entry]
-          Name=DocuVerse
+          Name=dv
           Comment=Q&A app for easy information retrieval from documents
           Exec=dv
           Icon=dv
@@ -200,13 +247,13 @@ jobs:
       - name: Build AppImage
         run: |
           # Set the architecture explicitly
-          ARCH=x86_64 ./appimagetool AppDir "DocuVerse-${{ env.VERSION }}-x86_64.AppImage"
+          ARCH=x86_64 ./appimagetool AppDir "dv-${{ env.VERSION }}-x86_64.AppImage"
       
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: dv-linux
-          path: DocuVerse-${{ env.VERSION }}-x86_64.AppImage
+          path: dv-${{ env.VERSION }}-x86_64.AppImage
           
       - name: Check if running on tag
         id: check-tag
@@ -225,17 +272,17 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: env.IS_TAG == 'true'
         with:
-          files: DocuVerse-${{ env.VERSION }}-x86_64.AppImage
-          name: DocuVerse ${{ env.VERSION }}
+          files: dv-${{ env.VERSION }}-x86_64.AppImage
+          name: dv ${{ env.VERSION }}
           body: |
-            DocuVerse Q&A App Release v${{ env.VERSION }}
+            dv Q&A App Release v${{ env.VERSION }}
             
-            This release provides the Linux AppImage for DocuVerse, a Q&A application for easy information retrieval from documents of interest.
+            This release provides the Linux AppImage for dv, a Q&A application for easy information retrieval from documents of interest.
             
             ## Installation
             1. Download the AppImage
-            2. Make it executable: `chmod +x DocuVerse-${{ env.VERSION }}-x86_64.AppImage`
-            3. Run it: `./DocuVerse-${{ env.VERSION }}-x86_64.AppImage`
+            2. Make it executable: `chmod +x dv-${{ env.VERSION }}-x86_64.AppImage`
+            3. Run it: `./dv-${{ env.VERSION }}-x86_64.AppImage`
           draft: false
           prerelease: false
         env:
