--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -10,6 +10,14 @@ on:
     tags:
       - 'v*'  # Also run when a tag is pushed that starts with 'v'
 
+permissions:
+  contents: write
+  packages: read
+  
+jobs:
+  build-linux:
+    runs-on: ubuntu-latest
+
 jobs:
   build-linux:
     runs-on: ubuntu-latest
@@ -268,14 +276,14 @@ jobs:
             echo "IS_TAG=true" >> $GITHUB_ENV
             echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
             echo "RELEASE_NAME=dv ${{ env.VERSION }}" >> $GITHUB_ENV
+            echo "SHOULD_RELEASE=true" >> $GITHUB_ENV
             echo "Running on tag: $GITHUB_REF, tag name: ${GITHUB_REF#refs/tags/}"
           # For pull requests
           elif [[ $GITHUB_REF == refs/pull/* ]]; then
             PR_NUMBER=$(echo $GITHUB_REF | cut -d'/' -f3)
             echo "IS_TAG=false" >> $GITHUB_ENV
-            echo "TAG_NAME=pr-${PR_NUMBER}-${CURRENT_DATE}" >> $GITHUB_ENV
-            echo "RELEASE_NAME=dv ${{ env.VERSION }} (PR #${PR_NUMBER})" >> $GITHUB_ENV
-            echo "PRERELEASE=true" >> $GITHUB_ENV
+            # Don't try to create a release or tag for PRs, but upload to artifacts
+            echo "SHOULD_RELEASE=false" >> $GITHUB_ENV
             echo "Running on PR: $GITHUB_REF, PR number: $PR_NUMBER"
           # For push to main
           else
@@ -283,10 +291,12 @@ jobs:
             echo "TAG_NAME=dev-${CURRENT_DATE}" >> $GITHUB_ENV
             echo "RELEASE_NAME=dv ${{ env.VERSION }} (Development Build)" >> $GITHUB_ENV
             echo "PRERELEASE=true" >> $GITHUB_ENV
+            echo "SHOULD_RELEASE=true" >> $GITHUB_ENV
             echo "Running on branch: $GITHUB_REF"
           fi
       
       - name: Generate release notes
+        if: env.SHOULD_RELEASE == 'true'
         run: |
           cat > release_notes.md << EOF
           # dv Q&A App Release v${{ env.VERSION }}
@@ -312,6 +322,7 @@ jobs:
       
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
+        if: env.SHOULD_RELEASE == 'true'
         with:
           files: dv-${{ env.VERSION }}-x86_64.AppImage
           name: ${{ env.RELEASE_NAME }}
@@ -321,3 +332,42 @@ jobs:
           prerelease: ${{ env.PRERELEASE == 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Add PR comment with AppImage download link
+        if: github.event_name == 'pull_request'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const artifactName = 'dv-linux';
+            const version = process.env.VERSION;
+            
+            // Format the comment with Markdown
+            const commentBody = `## 🚀 AppImage Build Successful!
+            
+            A new AppImage has been built for this PR.
+            
+            ### Download
+            You can download the AppImage from the Artifacts section of this workflow run:
+            1. Go to the "Actions" tab
+            2. Click on this workflow run
+            3. Scroll down to "Artifacts" and download \`${artifactName}\`
+            
+            ### Usage
+            After downloading:
+            \`\`\`bash
+            chmod +x dv-${version}-x86_64.AppImage
+            ./dv-${version}-x86_64.AppImage
+            \`\`\`
+            `;
+            
+            // Get the PR number from the event context
+            const prNumber = context.issue.number;
+            
+            // Add the comment to the PR
+            github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber,
+              body: commentBody
+            });
