--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -147,6 +147,9 @@ jobs:
       - name: Create version info file
         shell: pwsh
         run: |
+          $version = "${{ env.VERSION }}"
+          $versionComma = $version.Replace(".", ",")
+          
           $versionInfo = @"
           # UTF-8
           #
@@ -156,8 +159,8 @@ jobs:
             ffi=FixedFileInfo(
               # filevers and prodvers should be always a tuple with four items: (1, 2, 3, 4)
               # Set not needed items to zero 0.
-              filevers=(${{ env.VERSION }}.replace('.', ',') + ',0'),
-              prodvers=(${{ env.VERSION }}.replace('.', ',') + ',0'),
+              filevers=($versionComma,0),
+              prodvers=($versionComma,0),
               # Contains a bitmask that specifies the valid bits 'flags'r
               mask=0x3f,
               # Contains a bitmask that specifies the Boolean attributes of the file.
@@ -181,12 +184,12 @@ jobs:
                   u'040904B0',
                   [StringStruct(u'CompanyName', u''),
                   StringStruct(u'FileDescription', u'DocuVerse Q&A Application'),
-                  StringStruct(u'FileVersion', u'${{ env.VERSION }}'),
+                  StringStruct(u'FileVersion', u'$version'),
                   StringStruct(u'InternalName', u'docuverse'),
                   StringStruct(u'LegalCopyright', u''),
                   StringStruct(u'OriginalFilename', u'docuverse.exe'),
                   StringStruct(u'ProductName', u'DocuVerse'),
-                  StringStruct(u'ProductVersion', u'${{ env.VERSION }}')])
+                  StringStruct(u'ProductVersion', u'$version')])
                 ]), 
               VarFileInfo([VarStruct(u'Translation', [1033, 1200])])
             ]
